--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\rohern\\Desktop\\Dojo\\python_stack\\my_env\\py3env\\Scripts\\python.exe"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.8/bin/python3.8"
 }
